# takagi3_chatbot_django

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  TTS_USAGE_GUIDE.md  db.sqlite3  get_random_secret_key.py  manage.py  pyproject.toml  test_tts.py  test_tts_complete.py  test_tts_simple.py
chatbot/: admin.py  consumers.py  context_processors.py  models.py  tests.py  tts_utils.py  urls.py  views.py
chatbot/management/commands/: createsuperuser.py  migrate_chat_to_message.py  reset_daily_counts.py
chatbot/migrations/: 0002_botsetting_usersetting.py  0003_message.py  0004_alter_usersetting_modelname.py  0005_usersetting_user_api_key_usersetting_user_base_url.py  0006_add_user_api_fields.py  0007_usersetting_avatar_url.py  0008_usersetting_daily_message_count_and_more.py  0009_usersetting_tts_enabled_usersetting_tts_language_and_more.py  0010_usersetting_tts_api_url.py  0010_usersetting_tts_api_url_and_more.py
chatbot/templatetags/: avatar_extras.py
django_chatbot/: asgi.py  settings.py  urls.py
static/css/: auth.css  chat.css  global.css
templates/: base.html  chatbot.html  login.html  password_reset_confirm.html  password_reset_request.html  register.html  user_settings.html
templates/email/: password_reset_email.html  registration_email.html
wiki/: takagi-main.json
