[project]
name = "takagi3-chatbot-django"
version = "0.2.1"
description = "A simple Django based Takagi-san themed chatbot using OpenAI API"
readme = "README.md"
authors = [ { name = "PaloMiku" } ]
license = { file = "LICENSE" }
# Django 4.1.x 官方支持 <=3.11，这里限制上限避免 3.12+ / 3.13 可能的不兼容
requires-python = ">=3.10"
dependencies = [
  # 为了兼容 Python 3.13，暂使用 4.2 LTS 分支（<5.0），若确认官方发布对 3.13 的支持可再升级
  "Django>=4.2,<5.0",
  "python-dotenv>=1.0.0",
  "openai>=1.0.0,<2.0.0",
  "channels>=4.0,<5.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "ipython"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 指定需要包含的包目录
packages = ["chatbot", "django_chatbot"]

[tool.hatch.build.targets.sdist]
include = ["chatbot", "django_chatbot", "templates", "static", "manage.py", "README.md", "LICENSE", "pyproject.toml"]

[tool.uv]
# uv 将自动生成 uv.lock；此处可放置源配置或索引镜像设置（需要时再调整）
