[project]
name = "takagi3-chatbot-django"
version = "0.1.1"
description = "A simple Django based Takagi-san themed chatbot using OpenAI API"
readme = "README.md"
authors = [ { name = "PaloMiku" } ]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "Django>=4.2,<5.0",
  "python-dotenv>=1.0.0",
  "openai>=1.0.0,<2.0.0",
  "channels>=4.0,<5.0",
  "daphne>=4.0,<5.0",
  "whitenoise>=6.6.0",
  "gradio-client>=1.12.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "ipython"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]

packages = ["chatbot", "django_chatbot"]

[tool.hatch.build.targets.sdist]
include = ["chatbot", "django_chatbot", "templates", "static", "manage.py", "README.md", "LICENSE", "pyproject.toml"]

